[package]
name = "betterls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = "0.20.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"
